# maple

./: .gitignore  .gitmodules  CMakeLists.txt
editor/: AssetGUI.hpp  CMakeLists.txt  editor.cpp  editor.hpp
maple/: Animation.hpp  AssetManager.cpp  AssetManager.hpp  AssetProperties.hpp  AssetRegistry.cpp  AssetRegistry.hpp  CMakeLists.txt  ComponentMap.hpp  ECSStorage.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  MapleComponents.hpp  MapleContext.hpp  Meta.cpp  Meta.hpp  Query.hpp  Registry.cpp  Registry.hpp  Scene.hpp  SceneParser.cpp  SceneParser.hpp  ScriptManager.hpp  Scripting.hpp  Utils.hpp  View.hpp  maple.cpp  maple.hpp
src/: Animation.hpp  AssetGUI.hpp  AssetManager.hpp  AssetProperties.hpp  AssetRegistry.hpp  CMakeLists.txt  ComponentMap.hpp  EditorScene.hpp  Entity.hpp  EntityManager.hpp  GameScene.hpp  LinkScript.hpp  Map.hpp  Maple.cpp  MapleComponents.hpp  MapleContext.hpp  Menu.hpp  Meta.hpp  Random.hpp  Registry.hpp  RenderTarget.hpp  Scene.hpp  SceneParser.hpp  ScriptManager.hpp  Scripting.hpp  Tileset.hpp  Windows.hpp  engine.cpp  scene.json
testproject/: CMakeLists.txt  assetregistry.json  project.json  scene.json  test.cpp
